--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /014/ControleArmazenamento/target/
 /014/Controle/target/
 /015/EleicaoPresidencial/target/
+/016/SalaryCalculator/target/
+/017/EmbaralhaPalavra/target/
