--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@
 /019/Fatorial/target/
 /020/ContadorString/target/
 /021/RemoveCaractere/target/
+/022/Aluguel/target/
+/022/CalculadoraAluguel/target/
+/023/CalculadoraSalario/target/
+/024/JogoAdivinhacao/target/
+/025/VerificarNumeroPrimo/target/
+/026/PalavraMaior/target/
+/027/Inteiros/target/
+/028/QuadradosPerfeitos/target/
